<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <PreferenceCategory android:title="@string/pref_cat_games">

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_games_show_location"
            android:title="@string/pref_cat_games_show_location_title"
            android:summaryOff="@string/pref_cat_games_show_location_summ_off"
            android:summaryOn="@string/pref_cat_games_show_location_summ_on" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_games_show_platforms"
            android:title="@string/pref_cat_games_show_platforms_title"
            android:summaryOff="@string/pref_cat_games_show_platforms_summ_off"
            android:summaryOn="@string/pref_cat_games_show_platforms_summ_on" />

    </PreferenceCategory>

</PreferenceScreen>